--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,6 +22,7 @@ $color-n-2: #595757;
 $color-white: #fff;
 $color-dark: #303540;
 $color-red: #D83856;
+$color-blue: #2EA7E0;
 $color-gray: #898989;
 $color-border-gray: #C9CACA;
 
@@ -50,6 +51,14 @@ a {
 
 a:hover {
   color: $color-white;
+}
+
+.color-red {
+  color: $color-red;
+}
+
+.divider {
+  color: $color-border-gray;
 }
 
 .login-bg {
@@ -308,7 +317,51 @@ a:hover {
 
     .general {
       height: 100%;
-        background-color: white;
+      background-color: white;
+      padding: 38px 23px;
+
+      .avatar {
+        margin-bottom: 21px;
+      }
+      h3 {
+        font-size: $font-size-l;
+      }
+      h4 {
+        font-size: $font-size-n;
+        margin-bottom: 0;
+      }
+      h5 {
+        font-size: $font-size-m;
+      }
+      p {
+        font-size: $font-size-s;
+      }
+      .list-item {
+        padding-top: 26px;
+        padding-bottom: 26px;
+
+        .title {
+          img {
+            margin-right: 10px;
+          }
+        }
+      }
+      .content {
+        margin-top: 26px;
+
+        h3 {
+          color: $color-blue;
+        }
+        p {
+          margin-bottom: 0;
+        }
+        .col {
+          border-left: 1px solid $color-border-gray;
+          &:first-child {
+            border-left: none;
+          }
+        }
+      }
     }
   }
 }
