--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -266,17 +266,21 @@ a:hover {
     border-bottom: 0;
 
     .nav-item  {
+      width: 129px;
+      height: 50px;
+      border-top: 1px solid $color-border-gray;
+      border-right: 1px solid $color-border-gray;
+      border-bottom: 1px solid $color-border-gray;
 
       a.nav-link {
-        color: #3E3A39;
-        border-top: 1px solid $color-border-gray;
-        border-right: 1px solid $color-border-gray;
-        border-bottom: 1px solid $color-border-gray;
+        color: $color-n;
+        padding: 0;
+        line-height: 50px;
         border-top-right-radius: 0;
         border-top-left-radius: 0;
 
         &:hover {
-
+          border-bottom: none;
         }
       }
       a.active {
@@ -567,6 +571,11 @@ a:hover {
   .default-list {
     padding-top: 48px;
 
+    .btn {
+      width: 93px;
+      //height: 29px;
+    }
+
     .default-table {
       border: 1px solid rgba(216, 56 ,86, 0.1);
       font-size: 14px;
@@ -614,7 +623,7 @@ a:hover {
       width: 30px;
       height: 30px;
       color: black;
-      border-color: #3E3A39;
+      border-color: $color-n;
       border-radius: 5px;
       padding: 0;
       padding-top: 3px;
